[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stories-bot"
version = "1.0.0"
description = "Telegram Stories publisher bot with scheduling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "George", email = "your@email.com"}
]
keywords = ["telegram", "bot", "stories", "scheduling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=20.0",
    "telethon>=1.26.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
stories-bot = "stories_bot.cli:main"

[project.urls]
Homepage = "https://github.com/GeorgeFromGeorgea/stories_bot"
Repository = "https://github.com/GeorgeFromGeorgea/stories_bot"

[tool.setuptools.packages.find]
include = ["stories_bot*"]
